--- a/Ra8875Driver/Ra8875Driver.csproj
+++ b/Ra8875Driver/Ra8875Driver.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Meadow.F7" Version="1.0.2.1" />
+      <PackageReference Include="Meadow.Foundation.Graphics.MicroGraphics" Version="1.0.2.1" />
     </ItemGroup>
 
 </Project>
